Refactor and enhance library with AI integration.
Updated the library to include new dependencies for AI functionalities, such as koog and Spring AI clients. Added a new module for handling AI-based chat interactions and corresponding tests to validate behavior. Renamed and rebranded the project to "koog-sauce" with updated descriptions and metadata.

--- a/koog-sauce/src/jvmTest/resources/simplelogger.properties
+++ b/koog-sauce/src/jvmTest/resources/simplelogger.properties
@@ -20,4 +20,5 @@ org.slf4j.simpleLogger.showShortLogName=false
 org.slf4j.simpleLogger.levelInBrackets=true
 
 # Set specific log levels for different packages
-org.slf4j.simpleLogger.log.com.example.library=debug
+org.slf4j.simpleLogger.log.ai.koog=debug
+org.slf4j.simpleLogger.log.me.kpavlov.koog=debug
