Refactor and add basic Spring-AI integration. (#2)
- Updated project structure
- Added initial Spring-AI integraiton

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,14 +1,19 @@
 [versions]
 assertj = "3.27.3"
 detekt = "1.23.8"
+finchly = "0.1.1"
+koog = "0.1.0"
 dokka = "2.0.0"
 junit = "5.12.2"
 kotest = "5.9.1"
 kotlin = "2.1.21"
 kotlinx-serialization = "1.8.1"
+kotlinx-coroutines = "1.10.2"
 kover = "0.9.1"
+mokksy = "0.4.1"
 mockk = "1.14.2"
 nexus-publish = "2.0.0"
+spring-ai = "1.0.0"
 slf4j = "2.0.17"
 spotless = "7.0.3"
 
@@ -18,10 +23,18 @@ assertj-core = { module = "org.assertj:assertj-core", version.ref = "assertj" }
 junit-jupiter-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
 junit-jupiter-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
 junit-jupiter-params = { module = "org.junit.jupiter:junit-jupiter-params", version.ref = "junit" }
+finchly = { module = "me.kpavlov.finchly:finchly", version.ref = "finchly" }
 kotest-assertions-core = { module = "io.kotest:kotest-assertions-core", version.ref = "kotest" }
-kotest-framework-engine = { module = "io.kotest:kotest-framework-engine", version.ref = "kotest" }
 kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
+kotlinx-coroutines-reactive = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-reactive", version.ref = "kotlinx-coroutines" }
+koog = { module = "ai.koog:koog-agents", version.ref = "koog" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+spring-ai-bom = { group = "org.springframework.ai", name = "spring-ai-bom", version.ref = "spring-ai" }
+spring-ai-openai = { group = "org.springframework.ai", name = "spring-ai-openai" }
+spring-ai-core = { group = "org.springframework.ai", name = "spring-ai-core" }
+mokksy-openai = { group = "me.kpavlov.aimocks", name = "ai-mocks-openai", version.ref = "mokksy" }
+spring-ai-client-chat = { group = "org.springframework.ai", name = "spring-ai-client-chat", version.ref = "spring-ai" }
+spring-ai-gemini = { group = "org.springframework.ai", name = "spring-ai-vertex-ai-gemini" }
 slf4j-simple = { module = "org.slf4j:slf4j-simple", version.ref = "slf4j" }
 
 # Serialization
