--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
 group=me.kpavlov.koog.sauce
 name=koog-sauce
 
-version=0.0.1-SNAPSHOT
+version=0.0.1
 
 versionSuffix=SNAPSHOT
 
