--- a/koog-sauce-langchain4j/src/jvmTest/resources/simplelogger.properties
+++ b/koog-sauce-langchain4j/src/jvmTest/resources/simplelogger.properties
@@ -22,3 +22,4 @@ org.slf4j.simpleLogger.levelInBrackets=true
 # Set specific log levels for different packages
 org.slf4j.simpleLogger.log.ai.koog=debug
 org.slf4j.simpleLogger.log.me.kpavlov.koog=debug
+org.slf4j.simpleLogger.log.dev.langchain4j=debug
